--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,13 @@
     <junit-jupiter.version>5.7.0</junit-jupiter.version>
     <assertj-core.version>3.18.1</assertj-core.version>
   </properties>
-  <name>day24-istvan</name>
+  <name>Explore Java 9</name>
   <dependencies>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -21,6 +26,7 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>${assertj-core.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
